--- a/src/scss/partials/layouts/_hearthstoneBannerCarousel.scss
+++ b/src/scss/partials/layouts/_hearthstoneBannerCarousel.scss
@@ -100,8 +100,49 @@
 
 .hearthstoneBannerBackgroundContainer {
     position: relative;
-
+    background-color: black;
     width: 100%;
     height: 100%;
     text-align: center;
+}
+
+.hearthstoneSlideImageLogoAndDescWrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    @media screen and (min-width: $md_breakpoint) {
+        padding-top: 5rem;
+        padding-left: 5rem;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hearthstoneSlideDesc {
+    font-weight: bold;
+    font-size: 2.5rem;
+    line-height: 1.2;
+    margin: 0;
+    margin-top: 1.5rem;
+    text-shadow: 4px 7px 17px rgb(0 0 0 / 80%);
+
+    @media screen and (min-width: $sm_breakpoint) {
+        font-size: 4rem;
+        margin-top: 2rem;
+    }
+    @media screen and (min-width: $md_breakpoint) {
+        font-size: 4.5rem;
+        margin-top: 3rem;
+    }
+    @media screen and (min-width: $lg_breakpoint) {
+        font-size: 6rem;
+        width: 50rem;
+    }
 }
